install sh e start.sh para facilitar a instalação e execucao do script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.0'
 
 services:
-  helloworld:
-    container_name: helloworld
+  eipriceteste:
+    container_name: eipriceteste
     build:
-      context: ./hello-world/
+      context: ./dockerfile/
     volumes:
       - ./:/app/
